src/css/main.scss
html {
    font-family:
        system-ui,
        -apple-system,
        BlinkMacSystemFont,
        'Segoe UI',
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        'Open Sans',
        'Helvetica Neue',
        sans-serif;
    color: #cdcdcd;
    background-color: #2a2a2e;

    p, a {
        font-size: 20px;
    }

    body {
        margin: 0;
    }

    a {
        text-decoration: none;
        color: #4baeee;
    }

    a:hover {
        text-decoration: none;
        color: #1c87cc;
    }

    h1 {
        font-size: 2.5rem;
        color: #fff;
        font-family: "menlo", "consolas", monospace;
    }

    h2 {
        font-size: 2.5rem;
        color: #dedede;
        clear: both; // breaks past the images
    }

    .link-hover {
        transition: all 0.25s ease;

        &:hover {
            color: #4baeee;
            transform: scale(0.9);
        }
    }

    .info-text {
        font-family: "menlo", "consolas", monospace;
        color: #dedede;
    }

    hr {
        clear: both;
    }

    .left-align {
        float: left;
    }

    .right-align {
        float: right;
    }

    .hoverable {
        filter: drop-shadow(5px 5px 10px #000000aa);
        transition: all 0.5s ease;

        &:hover {
            transform: scale(1.1);
        }
    }

    .right-align,
    .left-align {
        @media screen and (max-width: 1200px) {
            float: none;
            display: block;
            margin-left: auto;
            margin-right: auto;
        }
    }

    .padding-div {
        padding-left: calc(20vw - 80px);
        padding-right: calc(20vw - 80px);
    }

    .banner-img {
        filter: drop-shadow(0px 10px 10px #00000077);
        margin-bottom: 50px;
        margin-top: 0;
    }
}

